fixed position and z-index of 1 added

--- a/hunnie.css
+++ b/hunnie.css
@@ -7,7 +7,10 @@
     max-height: 10vh;
 }
 nav {
-    display: flex;
+	position: fixed;
+	width: 100%;
+	z-index: 1;
+	display: flex;
     justify-content: space-around;
     min-height: 10vh;
     background-color: rgb(245, 234, 223);
